# GitWand

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCHPAD_INBOX_PLAN.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  settings.local.json
.claude/skills/release/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-website.yml  perf.yml  publish-vscode.yml  publish.yml  release.yml
.impeccable/: config.json
.qlty/: qlty.toml
apps/desktop/: CLAUDE.md  dev-server.mjs  index.html  package.json  vite.config.ts
apps/desktop/.impeccable/: config.json
apps/desktop/src/: App.vue  vite-env.d.ts
apps/desktop/src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: parity_probe.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  types.rs
apps/desktop/src-tauri/src/commands/: ai.rs  azure.rs  bitbucket.rs  curl_util.rs  files.rs  gh.rs  github_api.rs  gitlab.rs  mod.rs  network.rs  ops.rs  read.rs  scratch.rs  secrets.rs  terminal.rs  workspace.rs
apps/desktop/src-tauri/src/git/: cmd.rs  mod.rs  parse.rs  repo_lock.rs
apps/desktop/src/__tests__/: llm-fallback-integration.test.ts
apps/desktop/src/assets/: main.css
apps/desktop/src/components/: AgentSessionsPanel.vue  AiTaskCloseModal.vue  AiTaskNameModal.vue  AppDock.vue  AppHeader.vue  Avatar.vue  BranchDirtySwitchModal.vue  BranchPanel.vue  CherryPickPanel.vue  CommitDiffViewer.vue  CommitGraph.vue  CommitLog.vue  ConflictAlert.vue  DashboardView.vue  DiffViewer.vue  EditCommitOverlay.vue  EmptyState.vue  FileExplorerPanel.vue  FileHistoryViewer.vue  FileList.vue  FolderDiffTree.vue  FolderPicker.vue  GitTerminal.vue  HelpView.vue  HooksPanel.vue  IssueDetailView.vue  LaunchpadView.vue  MergeEditor.vue  MergePreviewPanel.vue  MergeSuccessModal.vue  MonorepoPanel.vue  PrCommentThread.vue  PrCreateView.vue  PrDetailView.vue  PrInlineDiff.vue  PrIntelligencePanel.vue  PrListSidebar.vue  PrReviewModal.vue  PullRequestPanel.vue  RebaseEditor.vue  (+12 more)
apps/desktop/src/composables/: prAiLocale.ts  prAnnotations.ts  useAIProvider.ts  useAbsorb.ts  useAiPromptPresets.ts  useAiTasks.ts  useAppMenu.ts  useArchivedBranches.ts  useAvatar.ts  useBlameGutter.ts  useBranchPrSearch.ts  useBranchUpdatePrompt.ts  useCommitMessage.ts  useDraggableResizable.ts  useFileExplorer.ts  useGitRepo.ts  useGitWand.ts  useI18n.ts  useIdentity.ts  useInteractiveRebase.ts  useLaunchpadInbox.ts  useLaunchpadIssues.ts  useLaunchpadPrs.ts  useLaunchpadTeam.ts  usePinnedBranches.ts  usePrCache.ts  usePrFindingFilter.ts  usePrPanel.ts  usePrPreReview.ts  usePrReviewKeymap.ts  usePrReviewNav.ts  usePrReviewQueue.ts  usePrSummary.ts  useRepoFileTree.ts  useRepoTabs.ts  useResizeObserver.ts  useReviewIntelligence.ts  useSecretsScanner.ts  useSettings.ts  (+4 more)
docs/: core-analyse.md  design-system-preview.html  design-system.md  structural-merge.md
docs/audits/: apps-desktop-src-tauri.md  apps-desktop-src.md  packages-cli.md  packages-core.md  packages-mcp.md  packages-vscode.md
docs/superpowers/plans/: 2026-05-05-launchpad-vue-equipe.md  2026-06-22-move-changes-on-branch-switch.md  2026-06-22-multiforge-today.md  2026-06-23-v3.1.0-terminal-pty.md  2026-06-24-terminal-hub-ux-plan.md  2026-06-25-terminal-terax-git-first.md  2026-06-26-gittree-filter-autocomplete.md  2026-06-30-gittree-quick-filters-date-separators.md  2026-07-01-branch-selector-pr-search.md  2026-07-01-file-explorer-editor.md  2026-07-01-file-explorer-panel-ux-polish.md  2026-07-06-auto-base-recovery.md  2026-07-06-repo-lock-canonicalization.md  2026-07-06-resolution-preview-panel.md  2026-07-06-token-level-merge.md  2026-07-08-v3.5.0-secrets-scanner.md  2026-07-09-pr-badge-prefetch.md  2026-07-09-v3.6.0-pr-review-2.md  2026-07-10-pr-dock-badge-count.md
docs/superpowers/specs/: 2026-04-10-website-landing-docs-design.md  2026-04-17-core-v14-resolution-improvements-design.md  2026-06-16-v2.20.0-scratch-worktree-design.md  2026-06-17-monorepo-scope-design.md  2026-06-17-monorepo-scope-plan.md  2026-06-22-move-changes-on-branch-switch-design.md  2026-06-22-multiforge-today-design.md  2026-06-23-v3.1.0-terminal-pty-design.md  2026-06-24-terminal-hub-ux-design.md  2026-06-30-gittree-quick-filters-date-separators-design.md  2026-07-01-branch-selector-pr-search-design.md  2026-07-01-file-explorer-editor-design.md  2026-07-01-file-explorer-panel-ux-polish-design.md  2026-07-06-auto-base-recovery-design.md  2026-07-06-repo-lock-canonicalization-design.md  2026-07-06-resolution-preview-panel-design.md  2026-07-06-telemetry-umami-to-aptabase-plan.md  2026-07-06-token-level-merge-design.md  2026-07-07-recoverable-before-model-metric-design.md  2026-07-08-commutative-list-merge-decision.md  2026-07-09-pr-badge-prefetch-design.md  2026-07-09-v3.6.0-pr-review-2-target-ux.md  2026-07-10-pr-dock-badge-count-design.md  2026-07-16-issue-128-rebase-conflict-ux-plan.md
scripts/: PKGBUILD.template  bump-version.sh  fix-spawn-helper.mjs  replay-conflicts.mjs
website/: ai-agents.md  changelog.md  conflict-engine.md  features.md  index.md  package.json
website/.vitepress/: config.ts
website/.vitepress/theme/: AiAgentsPage.vue  CompareMatrix.vue  ConflictEnginePage.vue  FeaturesPage.vue  HomeLanding.vue  custom.css  index.ts
website/blog/: claude-code-gitwand-ai-agents.md  index.md  state-of-merge-conflict-resolution-2026.md  v2-10-forge-integrations.md  v2-13-ai-inline-suggestions.md  v2-14-forge-completeness.md  v2-5-llm-fallback.md  v2-9-launchpad.md  v3-2-integrated-terminal-ai-tasks.md  v3-5-pr-review-2-secrets-scanner.md
website/compare/: gitwand-vs-fork.md  gitwand-vs-gitbutler.md  gitwand-vs-github-desktop.md  gitwand-vs-gitkraken.md  gitwand-vs-sublime-merge.md  index.md
website/guide/: cli.md  conflict-resolution.md  desktop.md  getting-started.md  mcp.md
website/public/: llms.txt  robots.txt
website/public/.well-known/: api-catalog
website/reference/: cli-commands.md  core-api.md
(+91 files in other folders)
