[package]
name = "gitwand-desktop"
version = "0.0.1"
description = "GitWand Desktop — standalone merge conflict resolution"
authors = ["Laurent Guitton <lb.guitton@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "gitwand_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
