[package]
name = "gitwand-desktop"
version = "3.6.0"
description = "GitWand Desktop — standalone merge conflict resolution"
authors = ["Laurent Guitton <lb.guitton@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "gitwand_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ─── Parity probe (P2.3) ─────────────────────────────────────
#
# Petit binaire de test qui expose les commandes Tauri critiques en CLI, pour
# le harness de tests de parité Rust↔Node (`apps/desktop/tests/parity/`).
#
# Déclaré comme `[[example]]` plutôt que `[[bin]]` : tauri-bundler découvre
# automatiquement toutes les entrées `[[bin]]` d'un package et tente de les
# bundler comme binaires externes — ce qui cassait la release v1.5.1 car
# `parity_probe` n'est pas compilé dans la configuration de release normale.
# Les examples ne sont pas touchés par tauri-bundler et ne sont pas construits
# par défaut, donc pas besoin d'un feature flag.
#
# Build : `cargo build --example parity-probe`
# Sortie : `target/debug/examples/parity-probe`
[[example]]
name = "parity-probe"
path = "examples/parity_probe.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` feature opens the WebView inspector via Cmd+Option+I (macOS)
# or right-click → Inspect. Required for profiling / debugging the frontend
# in production builds. Safe to ship: tauri only enables the menu when the
# app is built in debug mode unless we explicitly enable it in release too.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
base64 = "0.22"
# Used for data-parallel iteration in workspace_*_all (P3.2). Each repo's
# git/gh subprocess runs on its own rayon thread instead of in series.
rayon = "1"
# Per-repo read/write serialization of git subprocesses (git/repo_lock.rs).
# `arc_lock` gives owned `Arc`-based guards so a command can hold the lock
# across its blocking `.output()` with a single-line RAII guard. Already in
# the tree transitively via tauri, so the direct dep adds ~zero binary cost.
parking_lot = { version = "0.12", features = ["arc_lock"] }
portable-pty = "0.9"

# libgit2 bindings for in-process git operations (P3.3). Used in the
# workspace_*_all hot paths to read branch + ahead/behind + file statuses
# without spawning git subprocesses (5-15ms each on macOS). Vendored to
# remove the runtime dependency on system libgit2 — adds ~500 KB to the
# binary in exchange for build reproducibility across machines.
#
# Scoped use only: the user-facing `git_status` command remains CLI-based
# to preserve the existing parity tests (`tests/parity/git-status.test.mjs`)
# which compare Rust output to the Node dev-server (also CLI-based).
# Pinned to >= 0.20.4 for the security advisory fixed in that release.
# Don't loosen this below 0.20.4 without checking the GHSA again.
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }

# OS keychain access for storing forge credentials (Bitbucket App Passwords,
# future multi-account tokens). Uses Keychain on macOS, libsecret on Linux,
# Windows Credential Manager on Windows.
keyring = "2"

# Anonymous launch telemetry via Aptabase (privacy-first analytics for
# desktop/Tauri apps). Replaced the previous Umami ping: Umami Cloud
# filters non-browser User-Agents and silently dropped every event
# (HTTP 200 + `{"beep":"boop"}` decoy, nothing recorded). Aptabase
# authenticates by App Key, so there is no UA/bot filtering. Only used in
# release builds (cfg(not(debug_assertions))). Pulls in reqwest + tokio
# transitively — see Task 5 measurement note in the migration plan.
tauri-plugin-aptabase = "1.0.0"

# Anonymous install ID generation (v4 random UUID, stored on first launch).
uuid = { version = "1", features = ["v4"] }

# Secrets scanner (v3.5.0) — linear-time regex engine (no catastrophic
# backtracking), a security plus since it also compiles user-supplied
# patterns from `.gitwandrc`. Mirrored by a pure-RegExp TS engine in
# @gitwand/core; see commands/secrets.rs.
regex = "1"

# ─── Release profile (P2.4) ──────────────────────────────────
#
# Profile tuné pour la build de production (vs defaults Cargo conservateurs).
# Gains attendus : binaire plus petit, code plus rapide. Compile time +30s.
#
# Notes :
# - `lto = "fat"` : optim trans-crates, +10-15% perf, -20% taille binaire.
# - `codegen-units = 1` : opti maximale (vs 16 par défaut), +1-3% perf.
# - `strip = "symbols"` : retire les symbols du binaire final, -10 MB env.
# - `panic = "unwind"` (default) intentionnel : les command handlers Tauri
#   reposent sur l'unwinding pour récupérer d'un panic sans tuer le process.
#   Ne PAS passer à "abort" sans audit complet du code.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3

# ─── Release-debug profile (P2.4) ────────────────────────────
#
# Build en mode release avec symbols conservés, pour profiling local
# (Instruments macOS, perf Linux, samply, etc.) sans recompiler en debug.
# Build : `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
debug = true
strip = false

# ─── Patch: tauri-plugin-aptabase tokio runtime panic ────────
#
# Upstream 1.0.0 spawns via raw `tokio::spawn` in `src/client.rs` instead of
# `tauri::async_runtime::spawn`, which panics at startup in release builds
# ("there is no reactor running, must be called from the context of a
# Tokio 1.x runtime") — see aptabase/tauri-plugin-aptabase#16 and #22. The
# fix is queued upstream in PR #30 (unmerged as of this writing). Rather than
# depend on a random third-party fork carrying that unreviewed PR, we
# cherry-picked the exact one-line fix onto a fork under our own GitHub
# account (`devlint/tauri-plugin-aptabase`, branch `fix/tokio-runtime-panic`)
# with no other changes and no dependency bumps.
[patch.crates-io]
tauri-plugin-aptabase = { git = "https://github.com/devlint/tauri-plugin-aptabase", rev = "a868ab1db74b6ae6616389022680881a2c352e1c" }
